K8S/dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: companyhubbackend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: companyhubbackend
  template:
    metadata:
      labels:
        app: companyhubbackend
    spec:
      containers:
        - name: companyhubbackend
          image: 'gcr.io/company-hub-286820/fullcycle:638bcfa'
          ports:
            - containerPort: 8080  
      restartPolicy: Always
