K8S/svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: companyhubbackend-service
    labels:
      app: companyhubbackend
spec:
  type: NodePort
  ports:
      - protocol: TCP
        name: http-svc
        port: 80
        targetPort: 8080
        
  selector:
      app: companyhubbackend
